--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,19 @@
 .bg-primary{
-	background-color: #331f96!important;
+	background-color: #00796B!important;
 }
 .rightFloat{
 	float: right;
 }
 body{
-	background-color: #92e8e8;
+	background-color: #b5e0db;
 }
 h1{
 	color: #440099;
 }
 li{
 	list-style: none;
+}
+.btn-primary{
+	background-color: #607D8B!important;
+	border-color: #607D8B!important;
 }
